--- a/src/base.css
+++ b/src/base.css
@@ -13,6 +13,11 @@ html {
     overflow-y: scroll;
 }
 
+a {
+    color: inherit;
+    text-decoration: none;
+}
+
 ul,
 li {
     list-style-type: none;
